--- a/web/index.html
+++ b/web/index.html
@@ -21,13 +21,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="dine_in">
+  <meta name="apple-mobile-web-app-title" content="dine_in_resturant">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>dine_in</title>
+  <title>dine_in_resturant</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -36,12 +36,6 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer=""></script>
-  
-  
-  
-  
-  
-  
   <style id="splash-screen-style">
     html {
       height: 100%
@@ -115,8 +109,6 @@
       <source srcset="splash/img/dark-1x.png 1x, splash/img/dark-2x.png 2x, splash/img/dark-3x.png 3x, splash/img/dark-4x.png 4x" media="(prefers-color-scheme: dark)">
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
-  
-  
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
